// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`modal flow golden frames renders the help overlay 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
        ╭──────────────────────────────────────────────────────────────╮        
▼ statio│                         station help                         │qs] [▾] 
 [1] ○ c│                                                              │6 #70 ✓ 
 [2] - d│  Ctrl-O     open/close project view                          │        
 [3] ○ p│  Ctrl-Q     quit Station                                     │  #73 ✓ 
 [4] + s│  Ctrl-\\     split pane right                                 │        
 [5] ⠋ s│  Ctrl-^     split pane below (Ctrl-6)                        │6 #76 … 
        │  Ctrl-]     focus next pane                                  │        
▼ observ│  Ctrl-/     close split pane (Ctrl-_)                        │qs] [▾] 
 [6] x b│  Enter/Sp   open project view on welcome                     │   #8 ✓ 
 [7] ⠋ p│  Esc/↑↓     context menu close/move                          │8 #16 … 
 [8] ○ t│  Enter/Sp   context menu select                              │-1 #4 ✓ 
        │                     station project view                     │        
▼ script│  ↑/↓        move cursor                                      │qs] [▾] 
 [9] ○ a│  ↵          open focused session                             │6 #5 x1 
 [a] ? m│  tab        next session needing you                         │ -1 #10 
 [b] - o│  wheel      scroll project list                              │        
        │  1-9/a-z    start or focus row                               │        
▼ empty-│  N/A/R/C/F/P  new/add/rename/fold/fork/settings              │qs] [▾] 
        ╰──────────────────────────────────────────────────────────────╯        
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the search prompt 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
 [b] - old-experiment                     -         no agent                    
                                                                                
search: apiject  0 sessions                                       [sh] [qs] [▾] 
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the collapse prompt 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
 [b] - old-experiment                     -         no agent                    
                                                                                
collapse project: 1:station 2:observer 3:scripts 4:empty-project  [sh] [qs] [▾] 
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the project settings picker prompt 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
 [b] - old-experiment                     -         no agent                    
                                                                                
settings for project: 1:station 2:observer 3:scripts 4:empty-projecth] [qs] [▾] 
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the project settings panel 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
   ┌────────────────────────────────────────────────────────────────────────┐   
▼ s│ Project settings                                                       │▾] 
 [1│ station                  │ Default agent                               │ ✓ 
 [2│▸ Default agent           │✓1 codex unknown                             │   
 [3│  Remove project          │ 2 opencode unknown                          │ ✓ 
 [4│                          │                                             │   
 [5│                          │ ✓ current · 1-9/a-z select                  │ … 
   │                          │                                             │   
▼ o│                          │                                             │▾] 
 [6│                          │                                             │ ✓ 
 [7│                          │                                             │ … 
 [8│                          │                                             │ ✓ 
   │                          │                                             │   
▼ s│                          │                                             │▾] 
 [9│                          │                                             │x1 
 [a│                          │                                             │10 
 [b│                          │                                             │   
   │                          │                                             │   
▼ e│ ↑↓ move   →/enter edit   esc close                                     │▾] 
   └────────────────────────────────────────────────────────────────────────┘   
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the project settings remove pane 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
   ┌────────────────────────────────────────────────────────────────────────┐   
▼ s│ Project settings                                                       │▾] 
 [1│ station                  │ Remove project                              │ ✓ 
 [2│  Default agent           │ Removes it from Station.                    │   
 [3│▸ Remove project          │ Worktrees & files stay on disk.             │ ✓ 
 [4│                          │                                             │   
 [5│                          │ Type "delete station" to confirm            │ … 
   │                          │ ▸ |delete station                           │   
▼ o│                          │                                             │▾] 
 [6│                          │ [ Remove project (R) ]                      │ ✓ 
 [7│                          │                                             │ … 
 [8│                          │                                             │ ✓ 
   │                          │                                             │   
▼ s│                          │                                             │▾] 
 [9│                          │                                             │x1 
 [a│                          │                                             │10 
 [b│                          │                                             │   
   │                          │                                             │   
▼ e│ ←/esc back                                                             │▾] 
   └────────────────────────────────────────────────────────────────────────┘   
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the project settings optimistic default 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
   ┌────────────────────────────────────────────────────────────────────────┐   
▼ s│ Project settings                                                       │▾] 
 [1│ station                  │ Default agent                               │ ✓ 
 [2│▸ Default agent           │ 1 codex unknown                             │   
 [3│  Remove project          │✓2 opencode unknown                 updating…│ ✓ 
 [4│                          │                                             │   
 [5│                          │ ✓ current · 1-9/a-z select                  │ … 
   │                          │                                             │   
▼ o│                          │                                             │▾] 
 [6│                          │                                             │ ✓ 
 [7│                          │                                             │ … 
 [8│                          │                                             │ ✓ 
   │                          │                                             │   
▼ s│                          │                                             │▾] 
 [9│                          │                                             │x1 
 [a│                          │                                             │10 
 [b│                          │                                             │   
   │                          │                                             │   
▼ e│ ↑↓ move   →/enter edit   esc close                                     │▾] 
   └────────────────────────────────────────────────────────────────────────┘   
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the remove slot sheet 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
┌────────────────────────────────────────────┐code  unknown           +3 -1 #10 
│ Select session to delete                   │      no agent                    
│                                            │                                  
│ Click a row or press slot key              │                    [sh] [qs] [▾] 
│ Esc:cancel                                 │                                  
│                                            │───────────────────────────────── 
└────────────────────────────────────────────┘h  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the remove confirm sheet 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
┌────────────────────────────────────────────┐                    [sh] [qs] [▾] 
│ Delete session?                            │code  idle           +14 -6 #5 x1 
│ Session  cli-help-man                      │code  unknown           +3 -1 #10 
│ Removes agent, worktree, and panes.        │      no agent                    
│                                            │                                  
│ Yes (y)     No (n)                         │                    [sh] [qs] [▾] 
│ Esc/Enter:cancel                           │                                  
│                                            │───────────────────────────────── 
└────────────────────────────────────────────┘h  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the rename slot prompt 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
 [b] - old-experiment                     -         no agent                    
                                                                                
Choose the slot to rename: 1-9/a-z                                [sh] [qs] [▾] 
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the rename sheet 1`] = `
"FLEET  ● 0 ready  ⠋ 1 working  ! 3 needs you  ? 1 unknown  x 1 exited  ○ 0 idle 
                                                                                
                                                                                
▼ station  4 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ! hook-scope                     codex     Agent needs appro… +8 -2 #12 x2 
 [2] ? metadata-refresh               codex     unknown                   +3 -1 
 [3] ! popup-latency                  codex     No progress was… +120 -44 #13 … 
 [4] ⠋ pr-info                        codex     working                   #11 ✓ 
                                                                                
▼ observer  2 sessions · 2 agents                                 [sh] [qs] [▾] 
 [5] x done-run                       opencode  exited                          
 [6] ! sqlite-cleanup                 opencode  Agent needs appro… +19 -2 #6 x1 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Rename Session                                                               │
│                                                                              │
│ Name       hook-scope|                                                       │
│ Enter:rename   Esc:back                                                      │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the fork slot sheet 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
┌────────────────────────────────────────────┐code  unknown           +3 -1 #10 
│ Select session to fork                     │      no agent                    
│                                            │                                  
│ Click a row or press slot key              │                    [sh] [qs] [▾] 
│ Esc:cancel                                 │                                  
│                                            │───────────────────────────────── 
└────────────────────────────────────────────┘h  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the fork details sheet 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
┌────────────────────────────────────────────┐                                  
│ Fork Session                               │                    [sh] [qs] [▾] 
│ Source   station · cli-help-man            │code  idle           +14 -6 #5 x1 
│ > Branch cli-help-man-fork|                │code  unknown           +3 -1 #10 
│   Copy   [x] uncommitted changes           │      no agent                    
│ Source keeps running — copy is read-only.  │                                  
│                                            │                    [sh] [qs] [▾] 
│ Fork (enter)                               │                                  
│ ↑↓:field space:toggle enter:fork esc:back  │───────────────────────────────── 
└────────────────────────────────────────────┘h  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the new session review 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ Create Session                                                               │
│                                                                              │
│ Project    station                                                           │
│ Name       station-XXXXXX                                                    │
│ Agent      codex unknown                                                     │
│                                                                              │
│ Enter:create N:name P:project A:agent Esc:cancel                             │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session edit name 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Set Session Name                                                             │
│                                                                              │
│ Project    station                                                           │
│ Name       |station-XXXXXX                                                   │
│                                                                              │
│ Enter:save   Esc:back                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session pick project 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Choose Project                                                               │
│                                                                              │
│ 1 station healthy                                                            │
│ 2 observer healthy                                                           │
│ 3 scripts healthy                                                            │
│ 4 empty-project healthy                                                      │
│                                                                              │
│ 1-9/a-z:select   Esc:back                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the new session pick agent 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-resume                     codex     starting                    
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 … 
                                                                                
▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾] 
 [6] x batch-export                       opencode  exited                 #8 ✓ 
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 … 
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓ 
                                                                                
▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾] 
┌──────────────────────────────────────────────────────────────────────────────┐
│ Choose Agent                                                                 │
│                                                                              │
│ 1 codex unknown                                                              │
│ 2 opencode unknown                                                           │
│                                                                              │
│ 1-9/a-z:select   Esc:back                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the project default agent picker 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle


▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾]
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓
 [2] - docs-cleanup                       -         no agent
 [3] ○ pty-buffer                         codex     idle                  #73 ✓
 [4] + session-resume                     codex     starting
 [5] ⠋ station-XXXXXXy                    codex     working      +412 -96 #76 …

▼ observer  3 sessions · 3 agents                                 [sh] [qs] [▾]
 [6] x batch-export                       opencode  exited                 #8 ✓
 [7] ⠋ provider-hooks                     opencode  working        +32 -8 #16 …
 [8] ○ trace-bundle                       opencode  idle             +1 -1 #4 ✓

▼ scripts  3 sessions · 2 agents                                  [sh] [qs] [▾]
┌──────────────────────────────────────────────────────────────────────────────┐
│ Select default agent for station                                             │
│                                                                              │
│✓1 codex unknown                                                              │
│ 2 opencode unknown                                                           │
│                                                                              │
│ ✓ current   1-9/a-z:select   Esc:cancel                                      │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the add project sheet 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
┌──────────────────────────────────────────────────────────────────────────────┐
│ Add Project                                                                  │
│ Start location                                                               │
│                                                                              │
│ > current directory                          /Users/example/Developer/station│
│   ~                                                                      home│
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ Enter:open Right:open Esc:cancel                                             │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;

exports[`modal flow golden frames renders the widget settings panel 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-r┌──────────────────────────────────────────────┐                
 [5] ⠋ station-o│ widgets                                      │ +412 -96 #76 … 
                │ session only · persist in config.toml        │                
▼ observer  3 se│ ▸ [on ] time                               × │  [sh] [qs] [▾] 
 [6] x batch-exp│   [off] weather NYC                        × │           #8 ✓ 
 [7] ⠋ provider-│   [on ] moon                               × │   +32 -8 #16 … 
 [8] ○ trace-bun│   [ + add widget ]                           │     +1 -1 #4 ✓ 
                │ ↵ toggle   [ ] reorder   x remove   a add   e│                
▼ scripts  3 ses└──────────────────────────────────────────────┘  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
 [b] - old-experiment                     -         no agent                    
                                                                                
▼ empty-project  0 sessions                                       [sh] [qs] [▾] 
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;

exports[`modal flow golden frames renders the widget settings picker 1`] = `
"FLEET  ● 0 ready  ⠋ 2 working  ! 0 needs you  ? 1 unknown  x 1 exited  ○ 4 idle 
                                                                                
                                                                                
▼ station  5 sessions · 4 agents                                  [sh] [qs] [▾] 
 [1] ○ cli-help-man                       codex     idle           +14 -6 #70 ✓ 
 [2] - docs-cleanup                       -         no agent                    
 [3] ○ pty-buffer                         codex     idle                  #73 ✓ 
 [4] + session-r┌──────────────────────────────────────────────┐                
 [5] ⠋ station-o│ add widget                                   │ +412 -96 #76 … 
                │ weather and tz are added in config.toml      │                
▼ observer  3 se│ ▸ time                                       │  [sh] [qs] [▾] 
 [6] x batch-exp│   fleet                                      │           #8 ✓ 
 [7] ⠋ provider-│   open PRs                                   │   +32 -8 #16 … 
 [8] ○ trace-bun│   moon                                       │     +1 -1 #4 ✓ 
                │ ↵ add   esc back                             │                
▼ scripts  3 ses└──────────────────────────────────────────────┘  [sh] [qs] [▾] 
 [9] ○ api-cache                          opencode  idle           +14 -6 #5 x1 
 [a] ? metadata-refresh                   opencode  unknown           +3 -1 #10 
 [b] - old-experiment                     -         no agent                    
                                                                                
▼ empty-project  0 sessions                                       [sh] [qs] [▾] 
                                                                                
─────────────────────────────────────────────────────────────────────────────── 
↵ open  N new  A add  ⇥ next-needs-me  / search  X delete  ? help  Q/esc:close  
"
`;
